--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -6,9 +6,9 @@
     position: fixed;
     top: 0px;
     height: 200px;
+    background-color: #000;
   }
   .header_nav_3 a, .header_nav_3 li {font-size: 1.5rem!important;}
-  .release_discography {margin-top: 200px%!important;}
 }
 @media (min-width: 767px) {
 .header {
