--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -5,7 +5,8 @@
   .header_nav_3 ul  {
     position: fixed;
     top: 0px;
-    height: 200px;
+    margin-top: 20px!important;
+    height: 50px!important;
     background-color: #000!important;
   }
   .header_nav_3 a, .header_nav_3 li {font-size: 1.5rem!important;}
