--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -3,8 +3,7 @@
     display: none;
   }
   .show-mobile {
-    display:inline;
-  }
+visibility: visible;  }
   .header_nav_3 ul  {
     position: fixed;
     top: 0px;
@@ -25,8 +24,7 @@
 }
 
 .show-mobile {
-display: none;
-}
+visibility: hidden;}
 body {
   padding : 0;
   font-family : 'Open Sans', sans-serif;
