--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -3,7 +3,7 @@
     display: none;
   }
   .show-mobile {
-visibility: visible; display: block; }
+visibility: visible!important; display: block!important; }
   .header_nav_3 ul  {
     position: fixed;
     top: 0px;
