--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -13,7 +13,7 @@ visibility: visible!important; display: block!important; }
   .header_nav_3 a, .header_nav_3 li {font-size: 1rem!important;}
   .artists_listing_all, .open_releases, .open_artists, .open_releases_content, .open_illustrator 
   {width: 100%!important;padding: 0px!important;}
-  ul.open_releases_button, ul.open_artists_button {display: none;}
+  ul.open_releases_button, ul.open_artists_button {display: none!important;}
 }
 @media (min-width: 767px) {
 .header {
