--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -13,8 +13,8 @@
   ul.open_releases_button, ul.open_artists_button {display: none!important;}
   .category_content, .releases_discography_listing_all, .artists_content, .header_content, .header_news_1_content, .header_news_2_content, .header_news_2_closed, .header_news_2_closed_button, .open_releases_content, .header_nav_3_content, .infos_content, .footer_content, .release_content, .open_release, .open_artists_content {
     width: 100%!important;
-    margin-left: auto;
-    margin-right: auto;
+    margin-left: auto!important;
+    margin-right: auto!important;
 }
 }
 @media (min-width: 767px) {
