--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -2,8 +2,8 @@
   .hidden-mobile {    display: none;  }
   .show-mobile {visibility: visible!important; display: block!important; }
   .header_nav_3 ul  {
-    position: fixed;
-    top: 0px;
+    position: fixed!important;
+    top: 0px!important;
     height: 50px!important;
     background-color: #000!important;
   }
