--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -7,9 +7,9 @@
     height: 80px!important;
     background-color: #000!important;
     width: 100%!important;
-    padding: 0px!important;
+    padding: 0px!important;margin-top:20px!important;
   }
-  .header_nav_3 a, .header_nav_3 li {font-size: 1.2rem!important;margin-top:20px!important;}
+  .header_nav_3 a, .header_nav_3 li {font-size: 1.2rem!important;}
   .artists_listing_all, .open_releases, .open_artists, .open_releases_content, .open_illustrator 
   {width: 100%!important;padding: 0px!important;}
   ul.open_releases_button, ul.open_artists_button {display: none!important;}
