--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -18,6 +18,7 @@
     margin-left: auto!important;
     margin-right: auto!important;
 }
+.text-bio { font-size: 1.2rem!important; background-color: transparent!important; }
 }
 @media (min-width: 767px) {
 .header {
