--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -8,6 +8,7 @@
     background-color: #000!important;
     width: 100%!important;
     padding: 0px!important;padding-top:40px!important;
+    text-align: center!important;
   }
   .header_nav_3 a, .header_nav_3 li {font-size: 1.2rem!important;}
   .artists_listing_all, .open_releases, .open_artists, .open_releases_content, .open_illustrator 
@@ -18,7 +19,7 @@
     margin-left: auto!important;
     margin-right: auto!important;
 }
-.text-bio .writers { font-size: 1.2rem!important; background-color: transparent!important; text-align: left!important;float:left!important}
+.text-bio .writers { font-size: 1rem!important; background-color: transparent!important; text-align: left!important;float:left!important}
 }
 @media (min-width: 767px) {
 .header {
