--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -21,6 +21,7 @@
 }
 .text-bio .writers { font-size: 1rem!important; background-color: transparent!important; text-align: left!important;float:left!important}
 .grid_3 {width: 100%!important;text-align: center!important;}
+.container_12 .grid_3 {width: 100%!important;}
 .artists_show_default, img.artists_pictures {display: none;}
 .artists_show {
   min-height: 0px!important;
