--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -22,13 +22,21 @@
 .text-bio .writers { font-size: 1rem!important; background-color: transparent!important; text-align: left!important;float:left!important}
 .grid_3 {width: 100%!important;text-align: center!important;}
 .container_12 .grid_3 {width: 100%!important;}
-.artists_show_default, img.artists_pictures, .calque_artists_artwork {display: none;}
+.artists_show_default, img.artists_pictures, .calque_artists_artwork, .hexTop, .hexBottom, .calque_artists_artwork_no {display: none;}
 .artists_show {
   min-height: 0px!important;
   padding: 0!important;
   padding-bottom: 20px;;
 }
 .artists_title {background-color: transparent!important;display: contents!important;}
+
+.hexagon {
+  position: relative;
+  width: 100%!important;
+  height: 220px;
+  background-position: center;
+  margin-left: 9px;
+  margin-right: 9px;
 }
 @media (min-width: 767px) {
 .header {
