--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -32,11 +32,9 @@
 
 .hexagon {
   position: relative;
-  width: 100%!important;
-  height: 220px;
-  background-position: center;
-  margin-left: 9px;
-  margin-right: 9px;
+  width: 90%!important;
+  height: 200px
+;
 }
 @media (min-width: 767px) {
 .header {
