--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -33,8 +33,7 @@
 .hexagon {
   position: relative;
   width: 90%!important;
-  height: 200px
-;
+  height: 200px;
 }
 @media (min-width: 767px) {
 .header {
