--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -35,6 +35,7 @@
   width: 90%!important;
   height: 200px;
 }
+}
 @media (min-width: 767px) {
 .header {
   background-position : center center;
@@ -49,6 +50,7 @@
 .show-mobile {
 visibility: hidden;
 display: none;}
+
 body {
   padding : 0;
   font-family : 'Open Sans', sans-serif;
