--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -9,6 +9,7 @@
     padding: 0px!important;padding-top:40px!important;
     margin-left: -180px!important;
   }
+  .header_calque{display: none;}
   .header_nav_3 a, .header_nav_3 li {font-size: 1.2rem!important;}
   .artists_listing_all, .open_releases, .open_artists, .open_releases_content, .open_illustrator 
   {width: 100%!important;padding: 0px!important;}
