--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -5,9 +5,11 @@
     position: fixed!important;
     top: 0px!important;
     height: 30px!important;
+    width: 97%!important;
     background-color: #000!important;
-    padding: 0px!important;padding-top:40px!important;
-    margin-left: -180px!important;
+    padding: 0px!important;
+    padding-top: 40px!important;
+    margin-left: -210px!important;
   }
   .header_calque{display: none;}
   .header_nav_3 a, .header_nav_3 li {font-size: 1.2rem!important;}
