--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -1,6 +1,6 @@
 @media (max-width: 767px) {
   .hidden-mobile {    display: none;  }
-  .show-mobile { display: block!important; }
+  .show-mobile {visibility: visible!important; display: block!important; }
   .header_nav_3 ul  {
     position: fixed!important;
     top: 0px!important;
@@ -50,6 +50,7 @@
 }
 
 .show-mobile {
+visibility: hidden;
 display: none;}
 
 body {
