--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -9,7 +9,7 @@
     background-color: #000!important;
     padding: 0px!important;
     padding-top: 40px!important;
-    padding-bottom: 40px!important;
+    margin-bottom: 40px!important;
     margin-left: -210px!important;
   }
   .header_calque{display: none;}
