--- a/src/web/frontend/css/main.css
+++ b/src/web/frontend/css/main.css
@@ -10,6 +10,7 @@
     padding: 0px!important;
     padding-top: 40px!important;
     margin-left: -210px!important;
+    margin-bottom: 20px!important;
   }
   .releases_discography_listing_all {
     margin-top: 40px!important;
